[package]
name = "lfs_11-0_wgetter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.5", features = ["stream", "blocking"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.17"
futures = "0.3.17"
md5 = "0.7.0"
hex = "0.4.3"